# lumen-conscious

./: .gitignore  CLAUDE.md  README.md  config.default.json  main.py  pyproject.toml
data/: soul.md  values.json
data/conversations/: 20260214-131303-43ede706.jsonl  20260214-141538-85359da9.jsonl  20260214-141932-9dd0885a.jsonl  20260214-191408-22ba6781.jsonl  20260214-192917-ba2eb71a.jsonl  20260214-193637-23b65f47.jsonl  20260214-200715-f3d0716c.jsonl  20260214-202930-07382327.jsonl  20260214-212302-94bc2129.jsonl
data/goals/: 2026.json
docs/: demo.md  nova.md  plan-01.md  plan-02.md  plan-03.md  spec.md  theory-of-consciousness.md
experiment/: __init__.py  analyze.py  metrics.py  perturbations.jsonl  recorder.py  runner.py
experiment/experiments/: ablation.py
experiment_output/: events.jsonl
experiments/ablation/: events.jsonl  report.md
instances/cleric/: soul-system-prompt.md  soul.md  values.json
instances/default/: soul-system-prompt.md  soul.md  values.json
instances/nova/: soul.md  values.json
kernel/: chat.py  config.py  context.py  data.py  history.py  init.py  log.py  loop_action.py  loop_exploration.py  loop_reflection.py  loops.py  memory.py  prompts.py  reflection.py  seed.py  skills.py  soul.py  step_action.py  step_reflection.py  tools.py
kernel/llm/: __init__.py  anthropic.py  base.py  openai.py  xai.py
seeds/: cleric.md  nova.md
skills/note/: main.py  pyproject.toml
skills/research_digest/: main.py  pyproject.toml
skills/search/: main.py  pyproject.toml
skills/webpage_summarizer/: main.py  pyproject.toml
(+80 files in other folders)
