[project]
name = "lumen"
version = "0.1.0"
description = "A consciousness architecture — a self-modifying system with values, goals, and identity that evolve through experience."
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "openai",
    "click",
    "prompt-toolkit",
]

[project.scripts]
lumen = "main:cli"

[tool.hatch.build.targets.wheel]
packages = ["kernel"]

[tool.hatch.build.targets.wheel.force-include]
"main.py" = "main.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
